# EquipoPP1-NEWSAN1-2C2024

./: Datos.Combinados3.xlsx  Makefile  Ocra-Newsan-1.24-sin-macros.xls  Ocra-Newsan-1.24-sin-macros.xlsx  Ocra-Newsan-1.24.xlsm  README.md  pyproject.toml
Newsan_pp1_2c_2024_analisis/: __init__.py  dataset.py  features.py  plots.py
Newsan_pp1_2c_2024_analisis/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
