[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Newsan_pp1_2c_2024_analisis"
version = "0.0.1"
description = "Somos un grupo de estudiantes del Centro Politecnico Superior Malvinas Argentina."
authors = [
  { name = "Equipo-Newsan1" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["Newsan_pp1_2c_2024_analisis"]
force_sort_within_sections = true
